FB connection added.

--- a/templates/web/pormibarrio/auth/general.html
+++ b/templates/web/pormibarrio/auth/general.html
@@ -62,7 +62,9 @@
                     <input class="green-btn" type="submit" name="email_sign_in" value="[% loc('Sign in') %]">
                 </div>
             </div>
-
+			<div>
+				<input type="image" src="/i/FB-f-Logo__blue_50.png" name="facebook_login" id="facebook_login" value="facebook_login" />
+			</div>
         </div>
     </fieldset>    
 </form>
