Delete users_pmb table. Added social sign in and identity document columns to users table

--- a/templates/web/pormibarrio/auth/general.html
+++ b/templates/web/pormibarrio/auth/general.html
@@ -68,8 +68,8 @@
 <form action="[% c.uri_for() %]" method="post" name="social_auth" class="validate">
 	<fieldset>
 		<div>
-			<button name="facebook_login" id="facebook_login" value="facebook_login"><img src="/i/FB-f-Logo__blue_50.png"/></button>&nbsp;<button 
-				name="twitter_login" id="twitter_login" value="twitter_login"><img src="/i/Twitter_logo_blue_50px_50px.png"/></button>
+			<button name="facebook_sign_in" id="facebook_sign_in" value="facebook_sign_in"><img src="/i/FB-f-Logo__blue_50.png"/></button>&nbsp;<button 
+				name="twitter_sign_in" id="twitter_sign_in" value="twitter_sign_in"><img src="/i/Twitter_logo_blue_50px_50px.png"/></button>
 		</div>
 	</fieldset>
 </form>
