--- a/templates/web/pormibarrio/auth/social_signup.html
+++ b/templates/web/pormibarrio/auth/social_signup.html
@@ -31,8 +31,8 @@
 				[% END %]
 				<input type="email" class="required email" id="email" name="email" value="[% email | html %]" placeholder="[% loc('Your email address') %]">
 
-				<label for="ci">[% loc('Document') %]</label>
-				<input type="text" name="ci" value="[% ci | html %]" placeholder="[% loc('Your document') %]">
+				<label for="identity_document">[% loc('Identity document') %]</label>
+				<input type="text" name="identity_document" value="[% identity_document | html %]" placeholder="[% loc('Your identity document') %]">
 				
 				<div class="form-txt-submit-box">
 					<input class="green-btn" type="submit" name="sign_in" value="[% loc('Sign in') %]">
