--- a/templates/web/pormibarrio/report/update-form.html
+++ b/templates/web/pormibarrio/report/update-form.html
@@ -73,14 +73,15 @@
 
         [% ELSE %]
 
+            <h3>[% loc("Now to submit your update&hellip;") %]</h3>
+
             <label for="form_rznvy">[% loc('Email' ) %]</label>
             [% IF field_errors.email %]
                 <p class='form-error'>[% field_errors.email %]</p>
             [% END %]
-            <input type="email" name="rznvy" id="form_rznvy" value="[% update.user.email | html %]" placeholder="[% loc('Your email address' ) %]" required>
-
+            <input type="email" name="form_rznvy" id="form_rznvy" value="[% update.user.email | html %]" placeholder="[% loc('Your email address' ) %]">
+            
             <div id="form_sign_in">
-                <h3>[% loc("Now to submit your update&hellip;") %]</h3>
                 <h2>[% loc("Do you have a FixMyStreet password?") %]</h2>
 
                 <div id="form_sign_in_yes" class="form-box">
@@ -110,7 +111,7 @@
                     <h5>[% loc('<strong>No</strong> Let me confirm my update by email') %]</h5>
 
                     [% INCLUDE name %]
-                    
+                                                         
                     <div class="general-sidebar-notes">
                         <p class="dark">[% loc('We never show your email') %]</p>
                         <p>[% loc('Providing a password is optional, but doing so will allow you to more easily report problems, leave updates and manage your reports.') %]</p>
@@ -123,6 +124,20 @@
                         <input class="green-btn" type="submit" name="submit_register" id="submit_register" value="[% loc('Post') %]">
                     </div>
                 </div>
+                
+				<div id="form_sign_social" class="form-box">			
+					[% IF c.config.FACEBOOK_APP_ID || c.config.TWITTER_KEY %]
+					<h5>[% loc('<strong>Or</strong> Use a social network account') %]</h5>
+					<div>
+						[% IF c.config.FACEBOOK_APP_ID %]
+						<button name="facebook_sign_in" id="facebook_sign_in" value="facebook_sign_in"><img src="/i/FB-f-Logo__blue_50.png"/></button>
+						[% END %]
+						[% IF c.config.TWITTER_KEY %]
+						<button name="twitter_sign_in" id="twitter_sign_in" value="twitter_sign_in"><img src="/i/Twitter_logo_blue_50px_50px.png"/></button>
+						[% END %]
+					</div>
+					[% END %]
+				</div>
             </div>
 
         [% END %]
