--- a/templates/web/pormibarrio/auth/general.html
+++ b/templates/web/pormibarrio/auth/general.html
@@ -5,7 +5,6 @@
 <form action="[% c.uri_for() %]" method="post" name="general_auth" class="validate">
     <fieldset>
         <input type="hidden" name="r" value="[% c.req.params.r | html %]">
-            
             [% IF email_error;
 
                 # other keys include fqdn, mxcheck if you'd like to write a custom error message
@@ -65,13 +64,19 @@
         </div>
     </fieldset>    
 </form>
+[% IF c.config.FACEBOOK_APP_ID || c.config.TWITTER_KEY %]
 <form action="[% c.uri_for() %]" method="post" name="social_auth" class="validate">
 	<fieldset>
 		<div>
-			<button name="facebook_sign_in" id="facebook_sign_in" value="facebook_sign_in"><img src="/i/FB-f-Logo__blue_50.png"/></button>&nbsp;<button 
-				name="twitter_sign_in" id="twitter_sign_in" value="twitter_sign_in"><img src="/i/Twitter_logo_blue_50px_50px.png"/></button>
+			[% IF c.config.FACEBOOK_APP_ID %]
+			<button name="facebook_sign_in" id="facebook_sign_in" value="facebook_sign_in"><img src="/i/FB-f-Logo__blue_50.png"/></button>
+			[% END %]
+			[% IF c.config.TWITTER_KEY %]
+			<button name="twitter_sign_in" id="twitter_sign_in" value="twitter_sign_in"><img src="/i/Twitter_logo_blue_50px_50px.png"/></button>
+			[% END %]
 		</div>
 	</fieldset>
 </form>
+[% END %]
 
 [% INCLUDE 'footer.html' %]
