--- a/templates/web/pormibarrio/auth/social_signup.html
+++ b/templates/web/pormibarrio/auth/social_signup.html
@@ -6,10 +6,12 @@
 <form action="[% c.uri_for('/auth/social_signup') %]" method="post" name="general_auth" class="validate">
     <fieldset>
         <input type="hidden" name="r" value="[% c.req.params.r | html %]">
+        <input type="hidden" name="facebook_id" value="[% facebook_id | html %]">
+        <input type="hidden" name="twitter_id" value="[% twitter_id | html %]">
         <div id="form_sign_in">
 			<div class="form-box">
 				<label for="fullname">[% loc('Name') %]</label>
-				<input type="text" name="fullname" value="[% fullname | html %]" placeholder="[% loc('Your name') %]">
+				<input type="text" name="fullname" value="[% fullname | html %]" placeholder="[% loc('Your name') %]" required>
 					
 				[% IF email_error;
 
@@ -29,7 +31,7 @@
 				[% ELSIF sign_in_error %]
 					<div class="form-error">[% loc('There was a problem with your email/password combination. If you cannot remember your password, or do not have one, please fill in the &lsquo;sign in by email&rsquo; section of the form.') %]</div>
 				[% END %]
-				<input type="email" class="required email" id="email" name="email" value="[% email | html %]" placeholder="[% loc('Your email address') %]">
+				<input type="email" class="required email" id="email" name="email" value="[% email | html %]" placeholder="[% loc('Your email address') %]" required>
 
 				<label for="identity_document">[% loc('Identity document') %]</label>
 				<input type="text" name="identity_document" value="[% identity_document | html %]" placeholder="[% loc('Your identity document') %]">
