--- a/templates/web/pormibarrio/auth/social_signup.html
+++ b/templates/web/pormibarrio/auth/social_signup.html
@@ -6,35 +6,27 @@
 <form action="[% c.uri_for('/auth/social_signup') %]" method="post" name="general_auth" class="validate">
     <fieldset>
         <input type="hidden" name="r" value="[% c.req.params.r | html %]">
-        <input type="hidden" name="facebook_id" value="[% facebook_id | html %]">
-        <input type="hidden" name="twitter_id" value="[% twitter_id | html %]">
+        <input type="hidden" name="facebook_id" value="[% user.facebook_id | html %]">
+        <input type="hidden" name="twitter_id" value="[% user.twitter_id | html %]">
         <div id="form_sign_in">
 			<div class="form-box">
-				<label for="fullname">[% loc('Name') %]</label>
-				<input type="text" name="fullname" value="[% fullname | html %]" placeholder="[% loc('Your name') %]" required>
-					
-				[% IF email_error;
-
-					# other keys include fqdn, mxcheck if you'd like to write a custom error message
-
-					errors = {
-						missing => loc('Please enter your email'),
-						inuse => loc('The specified e-mail is already in use by another user'),
-						other   => loc('Please check your email address is correct')
-					};
-					
-					loc_email_error = errors.$email_error || errors.other;
-				END %]
-				<label class="n" for="email">[% loc('Email') %]</label>
-				[% IF loc_email_error  %]
-					<div class="form-error">[% loc_email_error %]</div>
-				[% ELSIF sign_in_error %]
-					<div class="form-error">[% loc('There was a problem with your email/password combination. If you cannot remember your password, or do not have one, please fill in the &lsquo;sign in by email&rsquo; section of the form.') %]</div>
+				<label for="name">[% loc('Name') %]</label>
+				[% IF field_errors.name  %]
+					<div class="form-error">[% field_errors.name %]</div>
 				[% END %]
-				<input type="email" class="required email" id="email" name="email" value="[% email | html %]" placeholder="[% loc('Your email address') %]" required>
+				<input type="text" name="name" value="[% user.name | html %]" placeholder="[% loc('Your name') %]" required>
+				
+				<label class="n" for="email">[% loc('Email') %]</label>
+				[% IF field_errors.email  %]
+					<div class="form-error">[% field_errors.email %]</div>
+				[% END %]
+				<input type="email" class="required email" id="email" name="email" value="[% user.email | html %]" placeholder="[% loc('Your email address') %]" required>
 
 				<label for="identity_document">[% loc('Identity document') %]</label>
-				<input type="text" name="identity_document" value="[% identity_document | html %]" placeholder="[% loc('Your identity document') %]">
+				[% IF field_errors.identity_document  %]
+					<div class="form-error">[% field_errors.identity_document %]</div>
+				[% END %]
+				<input type="text" name="identity_document" value="[% user.identity_document | html %]" placeholder="[% loc('Your identity document') %]">
 				
 				<div class="form-txt-submit-box">
 					<input class="green-btn" type="submit" name="sign_in" value="[% loc('Sign in') %]">
