Cambios para el ingreso de direcciones parte 1 y agregado de funciones con error para cobrand

--- a/templates/web/pormibarrio/header.html
+++ b/templates/web/pormibarrio/header.html
@@ -41,6 +41,8 @@
 
         [% INCLUDE 'tracking_code.html' %]
 
+        <script type="text/javascript" src="[% version('/js/pormibarrio.js') %]"></script>
+
     </head>
     [% TRY %][% PROCESS 'set_body_class.html' %][% CATCH file %][% END %]
     <body class="[% bodyclass | html IF bodyclass %]">
