Removed log output and fixed category groups

--- a/templates/web/pormibarrio/report/new/category_groups.html
+++ b/templates/web/pormibarrio/report/new/category_groups.html
@@ -1,7 +1,7 @@
 [% FILTER collapse %]
 <script>
 	[% IF category_groups_json %]
-		var category_groups = [% category_groups_json | html %];
+		var category_groups = [% category_groups_json %];
 	[% ELSE %]
 		var category_groups = {};
 	[% END %]
