--- a/templates/web/pormibarrio/around/_report_banner.html
+++ b/templates/web/pormibarrio/around/_report_banner.html
@@ -1,3 +1,5 @@
+[% IF c.cobrand.moniker == 'pormibarrio' %]
+[% ELSE %]
 <h1 class="big-green-banner">
     [% loc( 'Click map to report a problem' ) %]
     [% IF c.cobrand.moniker == 'bromley' %]
@@ -12,3 +14,4 @@
         )
     %]
 </p>
+[% END %]
